# wincfg-hypr

./: meson.build  readme.md  run.sh
data/: org.natr12.wincfg-hypr.gschema.xml
include/: firstlaunch.h  func.h  loader.h  regextype.h  rule.h  ruleconfig.h  rulerow.h  rulesparsers.h  saver.h  simplerule.h  updatehandlers.h  window.h  windowtype.h
src/: firstlaunch.cpp  func.cpp  loader.cpp  main.cpp  ruleconfig.cpp  rulesparsers.cpp  saver.cpp  updatehandlers.cpp  window.cpp
